crates/fundle_macros_impl/tests/snapshots/bundle_errors__forward_empty.snap
---
source: crates/fundle_macros_impl/tests/bundle_errors.rs
expression: expand_fundle_bundle!(item)
---
::core::compile_error! {
    "fundle::bundle #[forward(...)] attribute cannot be empty"
}
