crates/fundle_macros_impl/tests/snapshots/bundle_errors__forward_invalid_syntax.snap
---
source: crates/fundle_macros_impl/tests/bundle_errors.rs
expression: expand_fundle_bundle!(item)
---
::core::compile_error! {
    "fundle::bundle #[forward(...)] attribute must contain valid type paths: expected identifier"
}
